// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Editor> short:markdown -> ShortMarkdownEditor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    content={
      Object {
        "key": "akey",
        "short": Object {
          "title": "thetitle",
          "type": "markdown",
        },
        "value": "*hello world*",
      }
    }
    hideLabel={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="control control-full"
      >
        <div
          className="label"
        >
          akey
        </div>
        <ShortTextEditorComponent
          content={
            Object {
              "key": "akey",
              "short": Object {
                "title": "thetitle",
                "type": "markdown",
              },
              "value": "*hello world*",
            }
          }
        />
      </div>,
      "className": "controls",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="label"
          >
            akey
          </div>,
          <ShortTextEditorComponent
            content={
              Object {
                "key": "akey",
                "short": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              }
            }
          />,
        ],
        "className": "control control-full",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "akey",
            "className": "label",
          },
          "ref": null,
          "rendered": "akey",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Object {
              "key": "akey",
              "short": Object {
                "title": "thetitle",
                "type": "markdown",
              },
              "value": "*hello world*",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="control control-full"
        >
          <div
            className="label"
          >
            akey
          </div>
          <ShortTextEditorComponent
            content={
              Object {
                "key": "akey",
                "short": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              }
            }
          />
        </div>,
        "className": "controls",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="label"
            >
              akey
            </div>,
            <ShortTextEditorComponent
              content={
                Object {
                  "key": "akey",
                  "short": Object {
                    "title": "thetitle",
                    "type": "markdown",
                  },
                  "value": "*hello world*",
                }
              }
            />,
          ],
          "className": "control control-full",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "akey",
              "className": "label",
            },
            "ref": null,
            "rendered": "akey",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "key": "akey",
                "short": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> short:markdown -> ShortMarkdownEditor 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ShortTextEditorComponent
    content={
      Object {
        "key": "akey",
        "short": Object {
          "title": "thetitle",
          "type": "markdown",
        },
        "value": "*hello world*",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "onChange": [Function],
      "type": "text",
    },
    "ref": Object {
      "current": null,
    },
    "rendered": null,
    "type": "input",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "onChange": [Function],
        "type": "text",
      },
      "ref": Object {
        "current": null,
      },
      "rendered": null,
      "type": "input",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:html -> LongHTMLEditor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "html",
        },
        "value": "*hello world*",
      }
    }
    hideLabel={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="control control-full"
      >
        <div
          className="label"
        >
          akey
        </div>
        <EditorComponent
          content={
            Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "html",
              },
              "value": "*hello world*",
            }
          }
        />
      </div>,
      "className": "controls",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="label"
          >
            akey
          </div>,
          <EditorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "html",
                },
                "value": "*hello world*",
              }
            }
          />,
        ],
        "className": "control control-full",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "akey",
            "className": "label",
          },
          "ref": null,
          "rendered": "akey",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "html",
              },
              "value": "*hello world*",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="control control-full"
        >
          <div
            className="label"
          >
            akey
          </div>
          <EditorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "html",
                },
                "value": "*hello world*",
              }
            }
          />
        </div>,
        "className": "controls",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="label"
            >
              akey
            </div>,
            <EditorComponent
              content={
                Object {
                  "key": "akey",
                  "text": Object {
                    "title": "thetitle",
                    "type": "html",
                  },
                  "value": "*hello world*",
                }
              }
            />,
          ],
          "className": "control control-full",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "akey",
              "className": "label",
            },
            "ref": null,
            "rendered": "akey",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "html",
                },
                "value": "*hello world*",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:html -> LongHTMLEditor 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditorComponent
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "html",
        },
        "value": "*hello world*",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <QuillComponent
        content={
          Object {
            "key": "akey",
            "text": Object {
              "title": "thetitle",
              "type": "html",
            },
            "value": "*hello world*",
          }
        }
      />,
      "className": "editor",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "content": Object {
          "key": "akey",
          "text": Object {
            "title": "thetitle",
            "type": "html",
          },
          "value": "*hello world*",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <QuillComponent
          content={
            Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "html",
              },
              "value": "*hello world*",
            }
          }
        />,
        "className": "editor",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "content": Object {
            "key": "akey",
            "text": Object {
              "title": "thetitle",
              "type": "html",
            },
            "value": "*hello world*",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:markdown -> LongMarkdownEditor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "markdown",
        },
        "value": "*hello world*",
      }
    }
    hideLabel={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="control control-full"
      >
        <div
          className="label"
        >
          akey
        </div>
        <CodeMirrorComponent
          content={
            Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "markdown",
              },
              "value": "*hello world*",
            }
          }
        />
      </div>,
      "className": "controls",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="label"
          >
            akey
          </div>,
          <CodeMirrorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              }
            }
          />,
        ],
        "className": "control control-full",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "akey",
            "className": "label",
          },
          "ref": null,
          "rendered": "akey",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "markdown",
              },
              "value": "*hello world*",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="control control-full"
        >
          <div
            className="label"
          >
            akey
          </div>
          <CodeMirrorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              }
            }
          />
        </div>,
        "className": "controls",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="label"
            >
              akey
            </div>,
            <CodeMirrorComponent
              content={
                Object {
                  "key": "akey",
                  "text": Object {
                    "title": "thetitle",
                    "type": "markdown",
                  },
                  "value": "*hello world*",
                }
              }
            />,
          ],
          "className": "control control-full",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "akey",
              "className": "label",
            },
            "ref": null,
            "rendered": "akey",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "markdown",
                },
                "value": "*hello world*",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:markdown -> LongMarkdownEditor 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CodeMirrorComponent
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "markdown",
        },
        "value": "*hello world*",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "codemirror",
    "nodeType": "host",
    "props": Object {
      "children": <textarea />,
      "className": "codemirror codemirror-long",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {},
      "ref": Object {
        "current": null,
      },
      "rendered": null,
      "type": "textarea",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "codemirror",
      "nodeType": "host",
      "props": Object {
        "children": <textarea />,
        "className": "codemirror codemirror-long",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": "textarea",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:text -> LongTextEditor 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "text",
        },
        "value": "*hello world*",
      }
    }
    hideLabel={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="control control-full"
      >
        <div
          className="label"
        >
          akey
        </div>
        <TextEditorComponent
          content={
            Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "text",
              },
              "value": "*hello world*",
            }
          }
        />
      </div>,
      "className": "controls",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="label"
          >
            akey
          </div>,
          <TextEditorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "text",
                },
                "value": "*hello world*",
              }
            }
          />,
        ],
        "className": "control control-full",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "akey",
            "className": "label",
          },
          "ref": null,
          "rendered": "akey",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "content": Object {
              "key": "akey",
              "text": Object {
                "title": "thetitle",
                "type": "text",
              },
              "value": "*hello world*",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="control control-full"
        >
          <div
            className="label"
          >
            akey
          </div>
          <TextEditorComponent
            content={
              Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "text",
                },
                "value": "*hello world*",
              }
            }
          />
        </div>,
        "className": "controls",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="label"
            >
              akey
            </div>,
            <TextEditorComponent
              content={
                Object {
                  "key": "akey",
                  "text": Object {
                    "title": "thetitle",
                    "type": "text",
                  },
                  "value": "*hello world*",
                }
              }
            />,
          ],
          "className": "control control-full",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "akey",
              "className": "label",
            },
            "ref": null,
            "rendered": "akey",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "content": Object {
                "key": "akey",
                "text": Object {
                  "title": "thetitle",
                  "type": "text",
                },
                "value": "*hello world*",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`<Editor> text:text -> LongTextEditor 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TextEditorComponent
    content={
      Object {
        "key": "akey",
        "text": Object {
          "title": "thetitle",
          "type": "text",
        },
        "value": "*hello world*",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <textarea
        onChange={[Function]}
      />,
      "className": ".text",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "onChange": [Function],
      },
      "ref": Object {
        "current": null,
      },
      "rendered": null,
      "type": "textarea",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <textarea
          onChange={[Function]}
        />,
        "className": ".text",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "onChange": [Function],
        },
        "ref": Object {
          "current": null,
        },
        "rendered": null,
        "type": "textarea",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
